- Configured DataGridView to use VirtualMode and added some required events, so it can save back 
  to the data source the grid changes (MySQL bug #61617, Oracle bug #12711786).
- Modified ASP.NET membership provider to create and query all related tables using lowercase names (MySQL bug #61108, Oracle bug #12702009).

Version 6.3.7
- IPv6 connections are now supported 
- fixed exection of command ";" to throw a query was empty exception instead of IndexOutOfRangeException 
  (MySQL bug #59537, Oracle bug #11766433)
- fixed bug that prevented setting the membershipprovider's ApplicationName property at runtime
  (MySQL bug #59438, Oracle bug #11770465)
- fixed MySqlConnectionStringBuilder.ContainsKey to return true for any alternative versions
  of a keyword (MySQL bug #59835, Oracle bug #11766671)
- fixed calculation of precision and scale for decimal columns
  (MySQL bug #59989, Oracle bug #11776346)
- fixed NullReferenceException when a timeout occurred inside a TransactionScope
  (MySQL bug #59346, Oracle bug #11766272)
- small but important improvements in EF sql generation
- added batching support for updates and deletes (bug #59616)
- Introduced workaround to unexpected query aborts (server 5.1+) when executing a datareader after a command.Cancel() (MySQL bug#60541).
- Fixed SetSite issues with Visual Studio 2010 integration (MySQL bug#60723, Oracle bug #12394470)
- modified schema1.sql in MySql.Web to remove ENGINE declaration on table creation (Oracle bug #12311974).
- fixed performance issue with executing stored procedures with output parameters
  (MySQL bug #60366, Oracle bug#12425959)
- Introduced more detailed exceptions for invalid connection strings errors (MySQL bug#44654, MySQL bug#53076).
- Introduced the real NUnit framework to the CF test suite and fixed issues on BaseTest to properly run with CF libraries. 